--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<html>
+    <head>
+        <style>
+            img {
+                max-width: 100%;
+                width: 50%;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Kayto</h1>
+
+        <p>
+        Your UI Sidekick
+        </p>
+
+        <h2>Usage</h2>
+
+        <ol>
+            <li>Install the Greasemonkey Firefox add-on.</li>
+            <li>Navigate to <a href="https://github.com/dailyraisin/kayto/blob/v0.0.3/dist/kayto.user.js">the github source user script</a> and click &quot;Raw&quot; to prompt the installation.</li>
+            <li>Edit the script preferences and enter the domains/pages where you wish to add the Kayto widget. Note: you can use <code>*</code> as a wildcard to match domains and pages.
+                <img src="images/prefs.png">
+                <img src="images/include.png">
+            </li>
+        </ol>
+    </body>
+</html>
