--- a/index.html
+++ b/index.html
@@ -1,28 +1,50 @@
 <html>
     <head>
+        <link href="https://cdn.jsdelivr.net/normalize/7.0.0/normalize.css" rel="stylesheet" type="text/css">
         <style>
             img {
+                display: block;
                 max-width: 100%;
                 width: 50%;
             }
+            body {
+                color: #666;
+                font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            }
+            .world {
+                max-width: 1100px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .tagline {
+                margin-bottom: 48px;
+            }
         </style>
+        <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Kayto</h1>
+        <div class="world">
+            <h1>Kayto</h1>
 
-        <p>
-        Your UI Sidekick
-        </p>
+            <p class="tagline">
+            <em>Your UI Sidekick</em>
+            </p>
 
-        <h2>Usage</h2>
+            <p><strong>Usage method 1:</strong> Include the styles and Javascript in your page via NPM</p>
+            <pre><code>npm install kayto</code></pre>
+            <pre><code>&lt;link href="node_modules/kayto/dist/kayto.css" rel="stylesheet"&gt;
+&lt;script src="node_modules/kayto/dist/kayto.js" type="text/javascript"&gt;&lt;/script&gt;</code></pre>
+            <br/>
 
-        <ol>
-            <li>Install the Greasemonkey Firefox add-on.</li>
-            <li>Navigate to <a href="https://github.com/dailyraisin/kayto/blob/v0.0.4/dist/kayto.user.js">the github source user script</a> and click &quot;Raw&quot; to prompt the installation.</li>
-            <li>Edit the script preferences and enter the domains/pages where you wish to add the Kayto widget. Note: you can use <code>*</code> as a wildcard to match domains and pages.
-                <img src="images/prefs.png">
-                <img src="images/include.png">
-            </li>
-        </ol>
+            <p><strong>Usage method 2:</strong> Include in a live site via Greasemonkey</p>
+            <ol>
+                <li>Install the Greasemonkey Firefox add-on.</li>
+                <li>Navigate to <a href="https://github.com/dailyraisin/kayto/blob/v0.0.4/dist/kayto.user.js">the github source user script</a> and click &quot;Raw&quot; to prompt the installation.</li>
+                <li>Edit the script preferences and enter the domains/pages where you wish to add the Kayto widget. Note: you can use <code>*</code> as a wildcard to match domains and pages.
+                    <img src="images/prefs.png">
+                    <img src="images/include.png">
+                </li>
+            </ol>
+        </div>
     </body>
 </html>
